<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@android:color/holo_green_dark"
    tools:context=".WaterCalcFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gallonsOfWaterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/gallons_of_water_used"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rbGroupFaucet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <RadioButton
                android:id="@+id/rbShower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/shower_head"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbBath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bath_sink_faucet"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbKitchen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kitchen_sink_faucet"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/minutes"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25dp">

            <ImageButton
                android:id="@+id/imageButtonDown"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_arrow_downward_24" />

            <TextView
                android:id="@+id/minutesTextView"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButtonUp"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_arrow_upward_24" />
        </LinearLayout>

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>